--- a/style.css
+++ b/style.css
@@ -25,22 +25,80 @@ body {
 
 .right-links {
     display: flex;
+    gap: 20px;
+    margin-right: 24%;
     margin-left: auto;
     color: #E5E7EB;
     font-size: 18px;
 }
 
 .intro {
+    height: 26%;
+    background-color: #1F2937;
+    flex: auto;
+    display: flex;
+}
 
+.intro-left {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 50%;
+    height: 50%;
+}
+
+.intro-left-content {
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    width: 600px;
+    height: 50%;
+    margin-right: 100px;
+    color: #E5E7EB;
+}
+
+.intro-right {
+    display: flex;
+    align-items: center;
+}
+
+.intro-button {
+    background-color: #3882F6;
+    border: none;
+    border-radius: 5px;
+    width: 100px;
+    height: 25px;
+    color: #F9FAF8;
+    font-weight: 600;
+}
+
+.img {
+    min-width: 500px;
+    height: 70%;
+    flex: auto;
+    background-color: #6d747d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #E5E7EB;
+}
+
+.images {
+    height: 26%;
+    flex: auto;
 }
 
 .quote {
     background-color: #E5E7EB;
+    height: 26%;
+    flex: auto;
 }
+
 
 .call-to-action {
-
+    height: 22%;
+    flex: auto;
 }
+
 
 .footer {
     background-color: #1F2937;
@@ -48,4 +106,14 @@ body {
     flex: auto;
     display: flex;
     margin-top: auto;
+    color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    font-weight: extra-bold;
+    color: #F9FAF8;
+    font-size: 48px;
+    margin-bottom: -10px;
 }
