--- a/style.css
+++ b/style.css
@@ -85,6 +85,27 @@ body {
 .images {
     height: 26%;
     flex: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.img-place {
+    width: 120px;
+    height: 120px;
+    border: solid 2px #3882F6;
+    border-radius: 10px;
+}
+.text {
+    width: 120px;
+    font-size: 18px;
+    color: #1F2937
 }
 
 .quote {
